# monster-siren-api

./: Cargo.toml  README.md
src/: lib.rs
src/types/: album.rs  lyrics.rs  mod.rs  song.rs
