[package]
name = "msr-api"
version = "0.1.0"
edition = "2021"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
overflow-checks = false

[dependencies]
getters2 = "0.1.4"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
tokio = "1.43.0"

[dev-dependencies]
tokio = { version = "1.43.0", features = ["full"] }

[features]
default = ["core"]
core = []